Fix missing license header